# print_scripts_tree_d

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  main.py  pyproject.toml  sandbox.ipynb
.claude/skills/new-shape/: SKILL.md
.claude/skills/watertight-debug/: SKILL.md
print_scripts_tree_d/: export.py  params.py  shapes.py
print_scripts_tree_d/shapes/: __init__.py  boxes.py  clips.py  furniture.py  panels.py  primitives.py
scratch/: _dev.py  template.py  try_column.py  try_cylinder_clip.py  try_hexagonal_mesh.py  try_holder.py  try_magnet.py  try_magnet_panel.py  try_nut.py  try_panel_with_holder.py  try_rounded_box.py  try_screw_part.py  try_table.py  try_washer.py
tests/: test_shapes.py
