[project]
name = "print_scripts_tree_d"
version = "0.1.0"
description = "Parametric 3D model generation scripts for 3D printing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build123d",
    "trimesh",
    "numpy",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "ipykernel",
    "ocp-vscode",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["print_scripts_tree_d"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
