[project]
name = "print_scripts_tree_d"
version = "0.1.0"
description = "Parametric 3D model generation scripts for 3D printing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "trimesh",
    "numpy",
    "build123d>=0.10.0",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "ipykernel",
    "ocp-vscode",
    "matplotlib>=3.11.0",
    "shapely>=2.1.2",
    "networkx>=3.6.1",
    "rtree>=1.4.1",
    "mapbox-earcut>=2.0.0",
    "pyvista>=0.48.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["print_scripts_tree_d"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Scratch files: wildcard re-exports, mid-cell imports, and interactive magics
"scratch/*.py" = ["F401", "F403", "F405", "E402"]

[tool.mypy]
strict = true
python_version = "3.13"
exclude = ["scratch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
